<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editText_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/buscar_paradas"
        android:inputType="text" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ListView>

        <TextView
            android:id="@+id/textViewMensajeError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/holo_red_light"
            android:textSize="15sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textViewSinResultados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/darker_gray"
            android:textSize="15sp"
            android:textStyle="bold|italic"
            android:text="@string/sinResultados"
            android:visibility="invisible"/>
    </RelativeLayout>
</LinearLayout>
